# trame-code

./: .codespellrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test_and_release.yml
example/language-features/: app.py  requirements.txt
example/language-server/: app.py  language_server_config.yml
example/language-server/langs/python/: __init__.py
example/live-state/: app.py  requirements.txt
example/read-only/: ex01.i  example.cpp  example.js  example.ts  requirements.txt  viewer.py  viewer_vue3.py
example/textmate/: app.py
example/textmate/files/: javascript_example.js  latex_example.tex  moose_example.i  python_example.py
example/textmate/langs/: __init__.py  moose.py  python.py
example/textmate/langs/moose/: __init__.py  moose.config.json  moose.grammar.json
example/textmate/langs/python/: python.config.json  python.grammar.json
src/trame/modules/: code.py
src/trame_code/: __init__.py
src/trame_code/module/: __init__.py
src/trame_code/widgets/: code.py
tests/: requirements.txt  test_import.py  test_language_features.py
trame/widgets/: code.py
trame_code/module/: __init__.py
trame_code/widgets/: code.py  language_server_manager.py  language_server_runner.py
vue-components/: README.md  package-lock.json  package.json  vite.config.ts  vue.config.js
vue-components/src/components/: Editor.js  Editor.vue  index.js  language-servers.js
vue-components/src/components/Editor/: language-servers.js  script.js  style.css
vue-components/src/themes/: README.md  dark_plus.json  dark_plus_experimental.json  index.js  light_plus_experimental.json  reference-style-textmate.txt
vue-components/src/utils/: langServer.js  monacoEnv.js  onig.js  textmate.js  wslink.js
