[project]
name = "trame-code"
version = "1.1.1"
description = "Widget for Monaco VS code editor for trame"
authors = [
    {name = "Kitware Inc."},
]
dependencies = [
    "trame_client",
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "MIT License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: JavaScript",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest >=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "src/trame_code/module/serve/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trame_code", "src/trame"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
    python -m pip install uv
    uv build
"""

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.ruff]

[tool.ruff.lint]
extend-select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "G",   # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001",  # Conflicts with formatter
]
isort.required-imports = []

[tool.ruff.lint.per-file-ignores]
"src/**" = ["SIM117"]
# trame namespace shims intentionally re-export and import lazily
"src/trame/**" = ["F401", "F403", "PLC0415"]
# tests use local imports and dummy callbacks
"tests/**" = ["T20", "ARG001", "PLC0415"]
# examples are illustrative demos, not library code
"example/**" = ["T20", "ARG001", "C408", "PLC0415", "PTH123", "RET504", "SIM117"]
